# gene-sim

./: .eslintignore  .gitignore  .pnp.cjs  BEHAVIOR_SYSTEM.md  CLAUDE.md  FOOD_REGEN_SCURVE.md  FOOD_SYSTEM_FIX.md  README.md  TODO-UI-IMPROVEMENTS.md  behavior-graph.html  index.html  package.json  setup.sh  vite.config.ts
.github/workflows/: deploy.yml
docs/: concept_architecture.md  deployment.md  hybrid-architecture.md  new_planet_renderer.md  performance_refactor.md  planet-rendering-mode.md  simulation_performance_analysis.md  wasm-implementation-todo.md
public/: coi-init.js  coi-serviceworker.js
scripts/: check-wasm.js
src/: App.css  App.tsx  index.css
src/audio/: SoundManager.ts  useSoundEffects.ts
src/client/: setupSimClient.ts  setupSimClientHybrid.ts
src/render/: BiomeBoundaries3D.tsx  BiomeLayer.tsx  BiomeLayer3D.tsx  BoundaryOverlay.tsx  CelestialBodies.tsx  CloudLayer.tsx  CloudLayerProcedural.tsx  CloudLayerShell.tsx  DebugArrows.tsx  EntityPoints.tsx  EntityPoints3D.tsx  FoodMesh.tsx  FoodTexture.tsx  PlanetSphere.tsx  Scene2D.tsx  Scene3D.tsx  Scene3DPlanetCanvas.tsx  Starfield.tsx
src/sim/: behaviors.ts  biomes.ts  coordinator.worker.ts  genes.ts  noise.ts  random.ts  sharedSimulation.ts  sim.worker.ts  sim.worker.ts.bak  sim.worker.wasm.ts  simulationCore.ts  spatialBehaviors.ts  spatialBehaviorsOptimized.ts  spatialHash.ts  subWorkerSimulation.ts  types.ts  wasmLoader.ts
src/stores/: usePlanet3DStore.ts  (+1 more)
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: collision.rs  lib.rs  movement.rs  physics.rs  spatial_hash.rs  types.rs
(+72 files in other folders)
