[package]
name = "gene-sim-core"
version = "0.1.0"
edition = "2021"
authors = ["Gene Sim Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"

# Math and performance
nalgebra = { version = "0.33", default-features = false, features = ["alloc"] }
# Note: packed_simd_2 requires nightly Rust and doesn't work with stable
# For SIMD, we'd need to use std::arch intrinsics directly or wait for portable_simd stabilization

# Serialization (for debugging)
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Web APIs
[dependencies.web-sys]
version = "0.3.72"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = []
# SIMD support removed - requires nightly Rust and packed_simd_2